yuvomi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yuvomi
  namespace: norriswu0
spec:
  selector:
    app: yuvomi
  ports:
    - port: 3000
      targetPort: 3000
